--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="cn.reactnative.modules.gpuimage">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="cn.reactnative.modules.gpuimage">
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <application android:allowBackup="true" android:label="@string/app_name">
+
+    </application>
 </manifest>
